extends Control

onready var Nodo_info_raca = $VBoxContainer/RacasContainer/InfoRacas
onready var Nodo_botao_menu = $VBoxContainer/HBoxContainer/OptionButton

onready var Nodo_titulo1 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer/Titulo1
onready var Nodo_titulo2 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo2
onready var Nodo_titulo3 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo3
onready var Nodo_titulo4 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo4
onready var Nodo_titulo5 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo5
onready var Nodo_titulo6 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo6
onready var Nodo_titulo7 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo7
onready var Nodo_titulo8 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo8
onready var Nodo_titulo9 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo9
onready var Nodo_titulo10 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo10
onready var Nodo_titulo11 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo11
onready var Nodo_titulo12 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo12
onready var Nodo_titulo13 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo13
onready var Nodo_titulo14 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo14
onready var Nodo_titulo15 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Titulo15
onready var Nodo_titulo16 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Titulo16
onready var Nodo_titulo17 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Titulo17
onready var Nodo_titulo18 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Titulo18
onready var Nodo_titulo19 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Titulo19
onready var Nodo_titulo20 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Titulo20
onready var Nodo_titulo21 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Titulo21
onready var Nodo_titulo22 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Titulo22
onready var Nodo_titulo23 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Titulo23
onready var Nodo_titulo24 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Titulo24
onready var Nodo_titulo25 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Titulo25

onready var Nodo_texto1 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto1
onready var Nodo_texto2 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto2
onready var Nodo_texto3 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto3
onready var Nodo_texto4 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto4
onready var Nodo_texto5 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto5
onready var Nodo_texto6 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto6
onready var Nodo_texto7 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto7
onready var Nodo_texto8 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto8
onready var Nodo_texto9 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto9
onready var Nodo_texto10 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto10
onready var Nodo_texto11 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto11
onready var Nodo_texto12 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto12
onready var Nodo_texto13 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto13
onready var Nodo_texto14 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto14
onready var Nodo_texto15 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer/Texto15
onready var Nodo_texto16 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Texto16
onready var Nodo_texto17 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Texto17
onready var Nodo_texto18 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Texto18
onready var Nodo_texto19 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Texto19
onready var Nodo_texto20 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Texto20
onready var Nodo_texto21 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Texto21
onready var Nodo_texto22 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Texto22
onready var Nodo_texto23 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Texto23
onready var Nodo_texto24 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Texto24
onready var Nodo_texto25 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Texto25

onready var Nodo_imagem1 = $VBoxContainer/RacasContainer/InfoRacas/Info/HBoxContainer2/VBoxContainer2/Imagem1


var caminho_imagem = "res://Racas/imgs/nome.jpg"

func _ready():
	for raca in JsonSingleton.json_data.result:
		Nodo_botao_menu.add_item(raca["titulo1"],raca["id"])
		
	
func _on_OptionButton_item_selected(index):
	var result_raca = JsonSingleton.json_data.result[index]
	var imagem_raca = load(caminho_imagem.replace("nome", result_raca["id"]))
	
	Nodo_imagem1.set_texture(imagem_raca)
	
	Nodo_titulo1.set_text(result_raca["titulo1"])
	Nodo_titulo2.set_text(result_raca["titulo2"])
	Nodo_titulo3.set_text(result_raca["titulo3"])
	Nodo_titulo4.set_text(result_raca["titulo4"])
	Nodo_titulo5.set_text(result_raca["titulo5"])
	Nodo_titulo6.set_text(result_raca["titulo6"])
	Nodo_titulo7.set_text(result_raca["titulo7"])
	Nodo_titulo8.set_text(result_raca["titulo8"])
	Nodo_titulo9.set_text(result_raca["titulo9"])
	Nodo_titulo10.set_text(result_raca["titulo10"])
	Nodo_titulo11.set_text(result_raca["titulo11"])
	Nodo_titulo12.set_text(result_raca["titulo12"])
	Nodo_titulo13.set_text(result_raca["titulo13"])
	Nodo_titulo14.set_text(result_raca["titulo14"])
	Nodo_titulo15.set_text(result_raca["titulo15"])
	Nodo_titulo16.set_text(result_raca["titulo16"])
	Nodo_titulo17.set_text(result_raca["titulo17"])
	Nodo_titulo18.set_text(result_raca["titulo18"])
	Nodo_titulo19.set_text(result_raca["titulo19"])
	Nodo_titulo20.set_text(result_raca["titulo20"])
	Nodo_titulo21.set_text(result_raca["titulo21"])
	Nodo_titulo22.set_text(result_raca["titulo22"])
	Nodo_titulo23.set_text(result_raca["titulo23"])
	Nodo_titulo24.set_text(result_raca["titulo24"])
	Nodo_titulo25.set_text(result_raca["titulo25"])
	
	Nodo_texto1.set_text(result_raca["texto1"])
	Nodo_texto2.set_text(result_raca["texto2"])
	Nodo_texto3.set_text(result_raca["texto3"])
	Nodo_texto4.set_text(result_raca["texto4"])
	Nodo_texto5.set_text(result_raca["texto5"])
	Nodo_texto6.set_text(result_raca["texto6"])
	Nodo_texto7.set_text(result_raca["texto7"])
	Nodo_texto8.set_text(result_raca["texto8"])
	Nodo_texto9.set_text(result_raca["texto9"])
	Nodo_texto10.set_text(result_raca["texto10"])
	Nodo_texto11.set_text(result_raca["texto11"])
	Nodo_texto12.set_text(result_raca["texto12"])
	Nodo_texto13.set_text(result_raca["texto13"])
	Nodo_texto14.set_text(result_raca["texto14"])
	Nodo_texto15.set_text(result_raca["texto15"])
	Nodo_texto16.set_text(result_raca["texto16"])
	Nodo_texto17.set_text(result_raca["texto17"])
	Nodo_texto18.set_text(result_raca["texto18"])
	Nodo_texto19.set_text(result_raca["texto19"])
	Nodo_texto20.set_text(result_raca["texto20"])
	Nodo_texto21.set_text(result_raca["texto21"])
	Nodo_texto22.set_text(result_raca["texto22"])
	Nodo_texto23.set_text(result_raca["texto23"])
	Nodo_texto24.set_text(result_raca["texto24"])
	Nodo_texto25.set_text(result_raca["texto25"])
	
